# nws-forecast-summarizer

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
src/config/: mod.rs
src/ollama/: mod.rs
src/routes/: mod.rs
