[package]
name = "nws-forecast-summarizer"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.18", features = ["json"] }
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
prometheus = "0.13.4"
gethostname = "0.4.3"
tracing = "0.1.40"
lazy_static = "1.4.0"
reqwest = { version = "0.12.4", features = ["json"] }
urlencoding = "2.1.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
ollama-rs = "0.2.0"
